Bug 152046 - DOCX Incorrect document layout
Summary: DOCX Incorrect document layout
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Paragraph
  Show dependency treegraph
 
Reported: 2022-11-14 22:08 UTC by tuefue
Modified: 2023-06-09 11:39 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document (7.54 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-14 22:09 UTC, tuefue
Details
Bug screenshot (6.23 KB, image/png)
2022-11-14 22:12 UTC, tuefue
Details
Bug screenshot (with select) (8.34 KB, image/png)
2022-11-14 22:14 UTC, tuefue
Details
ODT test document (11.91 KB, application/vnd.oasis.opendocument.text)
2022-11-27 16:26 UTC, tuefue
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tuefue 2022-11-14 22:08:50 UTC
Description:
 

Steps to Reproduce:
Open test.docx to see incorrect document layout.

Actual Results:
Screenshots with incorrect layout are attached.

Expected Results:
Correct layout


Reproducible: Always


User Profile Reset: No

Additional Info:
Comment 1 tuefue 2022-11-14 22:09:22 UTC
Created attachment 183597 [details]
Test document
Comment 2 tuefue 2022-11-14 22:12:34 UTC
Created attachment 183598 [details]
Bug screenshot
Comment 3 tuefue 2022-11-14 22:14:10 UTC
Created attachment 183599 [details]
Bug screenshot (with select)
Comment 4 Roman Kuznetsov 2022-11-17 19:47:31 UTC
Confirm the problem in

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ddb8a1a282aae74c1cee3a5e1f446abd0c00b116
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded
Comment 5 Roman Kuznetsov 2022-11-17 19:49:23 UTC
confirm in

Version: 7.4.0.3 (x86) / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

But no repro in

Version: 7.3.0.3 (x86) / LibreOffice Community
Build ID: 0f246aa12d0eee4a0f7adcefbf7c878fc2238db3
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

regression
Comment 6 LeroyG 2022-11-17 21:34:29 UTC
Not present in 7.3.7.2 on Windows 10.0.

nor in
Version: 7.3.6.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 1; OS: Linux 5.14; UI render: default; VCL: gtk3
Locale: es-MX (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 7 Roman Kuznetsov 2022-11-20 09:06:48 UTC
I bisected this one in win64-7.4 bisect repor and got

https://git.libreoffice.org/core/commit/41b012767feb8552b60a68c7be18d80c403304bf

https://gerrit.libreoffice.org/c/core/+/132571

Added to CC: Attila Bakos

Please take a look, thanks.
Comment 8 tuefue 2022-11-27 16:26:03 UTC
Also broken for ODT (see attachment).
Comment 9 tuefue 2022-11-27 16:26:30 UTC
Created attachment 183831 [details]
ODT test document
Comment 10 tuefue 2023-03-17 21:12:31 UTC
Still reproducible under 7.5.1.2.
Comment 11 tuefue 2023-04-03 14:34:03 UTC
Still reproducible under 7.5.2.1.
Comment 12 Justin L 2023-06-02 14:09:55 UTC
This probably should have been reverted right away as soon as the bug report was released. Attila, have you looked at this?
Comment 13 Commit Notification 2023-06-09 04:08:03 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/278b6d21d36a0ff401fdd9ed6f964cd0dca862bf

tdf#152046 Revert "tdf#100680 sw DOCX compatibility: fix wrap of as_char flys"

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2023-06-09 04:16:09 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/2b6c09164714e037e7c5bebb1586a7c0672c383a

tdf#152046 Revert "tdf#100680 sw DOCX compatibility: fix wrap of as_char flys"

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2023-06-09 07:12:26 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/56dfbfea05a12c7c4a20a2f1aab2d9c8fe585e78

tdf#152046 Revert "tdf#100680 sw DOCX compatibility: fix wrap of as_char flys"

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.