sw/inc/IDocumentSettingAccess.hxx
@@ -121,9 +121,6 @@ enum class DocumentSettingId
     // footnoteContainer default position is the page end instead of the column end
     // only if "evenly distributed" is set, and "collected at the end" is not set
     FOOTNOTE_IN_COLUMN_TO_PAGEEND,
-    // AsChar anchored flys wrapped differently in ooxml than normally so in case of
-    // docx enable this flag. For details see ticket tdf#100680.
-    WRAP_AS_CHAR_FLYS_LIKE_IN_OOXML,
     // Should we display follow by symbol for numbered paragraph if numbering exists, but "None"?
     NO_NUMBERING_SHOW_FOLLOWBY,
     // drop cap punctuation: smaller dashes, bullet, asterisks, quotation marks etc.
