sw/source/core/inc/DocumentSettingManager.hxx
@@ -176,7 +176,6 @@ class DocumentSettingManager final :
     bool mbAutoFirstLineIndentDisregardLineSpace;
     bool mbHyphenateURLs = false;
     // If this is on as_char flys wrapping will be handled the same like in Word
-    bool mbWrapAsCharFlysLikeInOOXML;
     bool mbNoNumberingShowFollowBy;
     bool mbDropCapPunctuation; // tdf#150200, tdf#150438
 
